--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -1,6 +1,7 @@
 %%%%% TIKZ GRAPHICS
 \usepackage{tikz}
 %\usepackage{pgffor}
+\usetikzlibrary{math}
 
 \tikzstyle{input}=[draw=none, inner sep=.2mm]
 \tikzstyle{gate}=[draw, circle, inner sep=.2mm, minimum size=4mm]
