--- a/paper/main.tex
+++ b/paper/main.tex
@@ -19,7 +19,8 @@
 
 %\titlerunning{Dummy short title} %TODO optional, please use if title is longer than one line
 
-\author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{Supported by Russian Science Foundation (18-71-10042).}
+\author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{}
+%{Supported by Russian Science Foundation (18-71-10042).}
 
 \author{Danila Pechenev}{St.~Petersburg State University}{danil-pechenev@mail.ru }{}{}
 
@@ -71,8 +72,6 @@
 \input defs
 
 \begin{document}
-%    \listoftodos
-%    \tableofcontents
-
+    \sloppy
     \input body
 \end{document}
