--- a/paper/main.tex
+++ b/paper/main.tex
@@ -22,7 +22,7 @@
 \author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{}
 %{Supported by Russian Science Foundation (18-71-10042).}
 
-\author{Danila Pechenev}{St.~Petersburg State University}{danil-pechenev@mail.ru }{}{}
+\author{Danila Pechenev}{St.~Petersburg State University}{danil-pechenev@mail.ru}{https://orcid.org/0000-0003-0575-0807}{}
 
 \author{Nikita Slezkin}{St.~Petersburg State University}{ne.slezkin@gmail.com}{https://orcid.org/0000-0003-1904-9261}{}
 
