--- a/paper/body.tex
+++ b/paper/body.tex
@@ -192,14 +192,14 @@ for which the approach described above leads to improved upper bounds.
     \[\size(\MOD_n^{3,r}) \le 3n-5-[(n+r) \equiv 0\bmod 3] \text{ for all $n \ge 3$ and $r$.}\]
     This improves slightly the previously known upper bound $\size(\MOD_n^{3,r}) \le 3n-4$ by~Demenkov et al.~\cite{DBLP:journals/ipl/DemenkovKKY10}.
     \item We~present improvements for $\size(\SUM_n)$ for various small~$n$ and show that some of~these circuits and their parts can be~used as~building blocks to~design efficient circuits for other functions in~semiautomatic fashion. In~particular, we~show that a~part of an~optimal circuit for $\SUM_5$ can be~used to~build optimal circuits of~size~$2.5n$ for $\MOD_n^{4,r}$~\cite{DBLP:journals/mst/Stockmeyer77} and best known circuits of~size~$4.5n+o(n)$ for $\SUM_n$~\cite{DBLP:journals/ipl/DemenkovKKY10}.
-    for $\SUM_n$. In~turn, an~efficient circuit for $\SUM_5$ can be~found
+    In~turn, an~efficient circuit for $\SUM_5$ can be~found
     in a~few seconds if~one starts from a~standard circuit for $\SUM_5$ composed
     out of~two full adders and one half adder.
     \item We~design new circuits for the threshold function defined as~follows:
     \[\THR_n^k(x_1, \dotsc, x_n)=[x_1+\dotsb+x_n \ge k] \, .\]
     The best known upper bounds for $\THR$ are the following:
     \begin{align*}
-        \size(\THR_n^k) &\le kn+o(n) \text{ for $2 \le k \le 4$~\cite{Dunne84} (see also~\cite[Theorem~2.3]{DBLP:books/teu/Wegener87}),}\\
+        \size(\THR_n^k) &\le kn+o(n) \text{ for $2 \le k \le 4$~\cite{Dunne84} (see also~\cite[6.2, Theorem~2.3]{DBLP:books/teu/Wegener87}),}\\
         \size(\THR_n^k) &\le 4.5n+o(n) \text{ for $5 \le k$~\cite{DBLP:journals/ipl/DemenkovKKY10}.}
     \end{align*}
     We~get the following improvement:
