--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -24,7 +24,9 @@
     "%cd ../content\n",
     "%rm -r *\n",
     "!git clone https://github.com/alexanderskulikov/circuit_improvement.git\n",
-    "%cd circuit_improvement"
+    "%cd circuit_improvement\n",
+    "%mv functions.py functions3.py\n",
+    "!sed -i \"s/functions/functions3/\" /content/circuit_improvement/circuit_search.py"
    ],
    "execution_count": null,
    "outputs": []
@@ -38,6 +40,7 @@
     "!pip install pycosat\n",
     "!apt install libgraphviz-dev\n",
     "!pip install pygraphviz\n",
+    "!pip install python-sat[pblib,aiger]\n",
     "import pygraphviz\n",
     "import sys\n",
     "from timeit import default_timer as timer\n",
@@ -83,7 +86,7 @@
     "    return [(sum(x) >> i) & 1 for i in range(ceil(log2(len(x) + 1)))]\n",
     "\n",
     "circuit_finder = CircuitFinder(dimension=3, number_of_gates=5, function=sum_n)\n",
-    "circuit = circuit_finder.solve_cnf_formula()\n",
+    "circuit = circuit_finder.solve_cnf_formula(solver=\"pysat\")\n",
     "print(circuit)"
    ],
    "execution_count": null,
@@ -160,7 +163,7 @@
     "        for j in range(n, n + size):\n",
     "            if i + n - 1 != j:\n",
     "                circuit_finder.forbid_wire(i, j)\n",
-    "    circuit = circuit_finder.solve_cnf_formula(verbose=0)\n",
+    "    circuit = circuit_finder.solve_cnf_formula(verbose=0, solver=\"pysat\")\n",
     "    circuit.draw(f'sum{n}')\n",
     "    pic.append(Image(filename=f'circuits/.images/sum{n}.png'))\n",
     "\n",
