--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,18 @@
+@article{DBLP:journals/corr/abs-2102-12579,
+	author    = {Alexander S. Kulikov and Danila Pechenev and 
+	Nikita Slezkin},
+	title     = {SAT-based Circuit Local Improvement},
+	journal   = {CoRR},
+	volume    = {abs/2102.12579},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2102.12579},
+	eprinttype = {arXiv},
+	eprint    = {2102.12579},
+	timestamp = {Tue, 02 Mar 2021 12:11:01 +0100},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-2102-12579.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/sat/IgnatievMM18,
     author    = {Alexey Ignatiev and
     Ant{\'{o}}nio Morgado and
