--- a/paper/main.tex
+++ b/paper/main.tex
@@ -19,8 +19,7 @@
 
 %\titlerunning{Dummy short title} %TODO optional, please use if title is longer than one line
 
-\author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{}
-%{Supported by Russian Science Foundation (18-71-10042).}
+\author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{Supported by Russian Science Foundation (18-71-10042).}
 
 \author{Danila Pechenev}{St.~Petersburg State University}{danil-pechenev@mail.ru}{https://orcid.org/0000-0003-0575-0807}{}
 
@@ -28,16 +27,19 @@
 
 \authorrunning{A.\,S.~Kulikov, D.~Pechenev, N.~Slezkin} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
 
-\Copyright{Alexander~S. Kulikov and Nikita Slezkin} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
+\Copyright{Alexander~S. Kulikov, Danila Pechenev, Nikita Slezkin} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
 \ccsdesc[500]{Theory of computation~Circuit complexity} %TODO mandatory: Please choose ACM 2012 classifications from https://dl.acm.org/ccs/ccs_flat.cfm
 
-\keywords{circuits, algorithms, complexity theory, SAT, SAT-solvers, heuristics} %TODO mandatory; please add comma-separated list of keywords
+\keywords{circuits, algorithms, complexity theory, SAT, SAT solvers, heuristics} %TODO mandatory; please add comma-separated list of keywords
 
 %\category{} %optional, e.g. invited paper
 
-\relatedversion{} %optional, e.g. full version hosted on arXiv, HAL, or other respository/website
-\relatedversiondetails[linktext={ECCC TR21-044}, cite={DBLP:journals/eccc/KulikovS21}]{Technical report}{https://eccc.weizmann.ac.il/report/2021/044/} %linktext and cite are optional
+%\relatedversion{} %optional, e.g. full version hosted on arXiv, HAL, or other respository/website
+%\relatedversiondetails[linktext={ECCC TR21-044}, cite={DBLP:journals/eccc/KulikovS21}]{Technical report}{https://eccc.weizmann.ac.il/report/2021/044/} %linktext and cite are optional
+
+\relatedversion{}
+\relatedversiondetails[cite={DBLP:journals/corr/abs-2102-12579}]{Full Version}{https://arxiv.org/abs/2102.12579s}
 
 %\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
 %\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
@@ -53,7 +55,7 @@
 
 \nolinenumbers %uncomment to disable line numbering
 
-\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
+%\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
 
 %Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \EventEditors{John Q. Open and Joan R. Access}
