--- a/paper/main.tex
+++ b/paper/main.tex
@@ -39,7 +39,7 @@
 %\relatedversiondetails[linktext={ECCC TR21-044}, cite={DBLP:journals/eccc/KulikovS21}]{Technical report}{https://eccc.weizmann.ac.il/report/2021/044/} %linktext and cite are optional
 
 \relatedversion{}
-\relatedversiondetails[cite={DBLP:journals/corr/abs-2102-12579}]{Full Version}{https://arxiv.org/abs/2102.12579s}
+\relatedversiondetails[cite={DBLP:journals/corr/abs-2102-12579}]{Full Version}{https://arxiv.org/abs/2102.12579}
 
 %\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
 %\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
